php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37394 erroneous parameter check in substr_compare
Submitted: 2006-05-10 11:20 UTC Modified: 2006-05-10 13:08 UTC
From: sivann at cs dot ntua dot gr Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 5.1.4 OS: Linux
Private report: No CVE-ID: None
 [2006-05-10 11:20 UTC] sivann at cs dot ntua dot gr
Description:
------------
substr_compare shouldn't output warning and return FALSE if the "length" parameter *equals* the length of main_str. It should do that only if length > strlen(main_str). 

Moreover an invalid error is returned: "The start position cannot exceed initial string length" even if specifying start position 0.

This error didn't exist in version 5.1.0.

Reproduce code:
---------------
echo substr_compare("abcd","abcd",0,4);




Expected result:
----------------
it should do the same as this (return 0):
echo substr_compare("abcd","abcd",0);


Actual result:
--------------
Warning: substr_compare() [function.substr-compare]: The start position cannot exceed initial string length in ...

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-05-10 13:08 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC