Fixed bug #37394 (substr_compare() returns an error when offset equals string length).